--- a/src/Ulb/Clbase/BrowseBundle/Resources/views/Customer/edit.html.twig
+++ b/src/Ulb/Clbase/BrowseBundle/Resources/views/Customer/edit.html.twig
@@ -6,80 +6,77 @@
     <h1>Изменение данных о Клиенте</h1>
     {{ form_start(edit_form, { 'attr': {'class': 'form-horizontal'} }) }}
         <div class="form-group">
-	    {{ form_label(edit_form.firstName) }}
-	    {{ form_errors(edit_form.firstName) }} 
-	    {{ form_widget(edit_form.firstName) }}
+    	    {{ form_label(edit_form.firstName) }}
+    	    {{ form_errors(edit_form.firstName) }} 
+    	    {{ form_widget(edit_form.firstName) }}
 
-                {{ form_label (edit_form.lastName) }} 
-                {{ form_errors(edit_form.lastName) }}
-                {{ form_widget(edit_form.lastName) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.email) }}
-                {{ form_errors(edit_form.email) }}
-                {{ form_widget(edit_form.email) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.tel) }}
-                {{ form_errors(edit_form.tel) }}
-                {{ form_widget(edit_form.tel) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.mainCity) }}
-                {{ form_errors(edit_form.mainCity) }}
-                {{ form_widget(edit_form.mainCity) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.town) }}
-                {{ form_errors(edit_form.town) }}
-                {{ form_widget(edit_form.town) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.street) }}
-                {{ form_errors(edit_form.street) }}
-                {{ form_widget(edit_form.street) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.houseNum) }}
-                {{ form_errors(edit_form.houseNum) }}
-                {{ form_widget(edit_form.houseNum) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.blockNum) }}
-                {{ form_errors(edit_form.blockNum) }}
-                {{ form_widget(edit_form.blockNum) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.buildNum) }}
-                {{ form_errors(edit_form.buildNum) }}
-                {{ form_widget(edit_form.buildNum) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.porch) }}
-                {{ form_errors(edit_form.porch) }}
-                {{ form_widget(edit_form.porch) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.floor) }}
-                {{ form_errors(edit_form.floor) }}
-                {{ form_widget(edit_form.floor) }}
-            </div>
-            <div>
-                {{ form_label (edit_form.flat) }}
-                {{ form_errors(edit_form.flat) }}
-                {{ form_widget(edit_form.flat) }}
-            </div>
-
+            {{ form_label (edit_form.lastName) }} 
+            {{ form_errors(edit_form.lastName) }}
+            {{ form_widget(edit_form.lastName) }}
             
-                {{ form_widget(edit_form.submit, { 'attr': {'class': 'btn btn-success'} }) }}
-     
-		  	<a class="btn btn-default" role="button" href="{{ path('customer') }}">
-			   Назад к списку
-			</a>
+            {{ form_label (edit_form.email) }}
+            {{ form_errors(edit_form.email) }}
+            {{ form_widget(edit_form.email) }}
 
-			{# form(delete_form) #}
-            {{ form_start(delete_form) }} 		   
-    		{{ form_widget(delete_form, { 'attr': {'class': 'btn btn-danger'} }) }}
-			{{ form_end(delete_form) }} 		
-	{{ form_end(edit_form) }} 
+            {{ form_label (edit_form.tel) }}
+            {{ form_errors(edit_form.tel) }}
+            {{ form_widget(edit_form.tel) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label (edit_form.mainCity) }}
+            {{ form_errors(edit_form.mainCity) }}
+            {{ form_widget(edit_form.mainCity) }}
+
+            {{ form_label (edit_form.town) }}
+            {{ form_errors(edit_form.town) }}
+            {{ form_widget(edit_form.town) }}
+
+            {{ form_label (edit_form.street) }}
+            {{ form_errors(edit_form.street) }}
+            {{ form_widget(edit_form.street) }}                
+        </div>
+        <div class="form-group">
+
+            {{ form_label (edit_form.houseNum) }}
+            {{ form_errors(edit_form.houseNum) }}
+            {{ form_widget(edit_form.houseNum) }}
+
+            {{ form_label (edit_form.blockNum) }}
+            {{ form_errors(edit_form.blockNum) }}
+            {{ form_widget(edit_form.blockNum) }}
+
+            {{ form_label (edit_form.buildNum) }}
+            {{ form_errors(edit_form.buildNum) }}
+            {{ form_widget(edit_form.buildNum) }}
+        </div>
+        <div class="form-group">
+            {{ form_label (edit_form.porch) }}
+            {{ form_errors(edit_form.porch) }}
+            {{ form_widget(edit_form.porch) }}
+
+            {{ form_label (edit_form.floor) }}
+            {{ form_errors(edit_form.floor) }}
+            {{ form_widget(edit_form.floor) }}
+
+            {{ form_label (edit_form.flat) }}
+            {{ form_errors(edit_form.flat) }}
+            {{ form_widget(edit_form.flat) }}
+        </div>
+    <ul class="navbar list-inline"> 
+        {{ form_widget(edit_form.submit, { 'attr': {'class': 'form-group btn btn-success navbar-btn'} }) }}
+        {{ form_end(edit_form) }}
+             
+        {# form(delete_form) #}
+        <li>
+	  	<a class="btn btn-default navbar-btn" role="button" href="{{ path('customer') }}">
+		   Назад к списку
+		</a>
+        </li>
+        <li>
+        {{ form_start(delete_form, { 'attr': {'class': 'form-group'} }) }} 		   
+    	{{ form_widget(delete_form, { 'attr': {'class': 'btn btn-danger navbar-btn'} }) }}
+		{{ form_end(delete_form) }} 
+        </li>		
+	</ul>     
 {% endblock %}
