--- a/src/Ulb/Clbase/BrowseBundle/Resources/views/Customer/show.html.twig
+++ b/src/Ulb/Clbase/BrowseBundle/Resources/views/Customer/show.html.twig
@@ -65,17 +65,18 @@
         </tbody>
     </table>
 </div>
-<div>
-    <a class="btn btn-default" role="button" href="{{ path('customer') }}">
+<div class="navbar">
+    {# form(delete_form) #}
+    {{ form_start(delete_form, { 'attr': {'class': 'navbar-form'} }) }}          
+    
+    <a class="btn btn-default navbar-btn" role="button" href="{{ path('customer') }}">
         Назад к списку
     </a>
 
-    <a class="btn btn-success" role="button" href="{{ path('customer_edit', { 'id': entity.id }) }}">
+    <a class="btn btn-success  navbar-btn" role="button" href="{{ path('customer_edit', { 'id': entity.id }) }}">
         Изменить
     </a>
-    {# form(delete_form) #}
-    {{ form_start(delete_form, { 'attr': {'class': 'form-inline'} }) }}          
-    {{ form_widget(delete_form, { 'attr': {'class': 'btn btn-danger'} }) }}
+    {{ form_widget(delete_form,{ 'attr': {'class': 'btn btn-danger'} }) }}
     {{ form_end(delete_form) }} 
 </div>
 {% endblock %}
