--- a/src/Ulb/Clbase/BrowseBundle/Resources/views/Default/index.html.twig
+++ b/src/Ulb/Clbase/BrowseBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
       
         <h1>Приветствуем Вас в &laquo;Улыбкино&raquo;!</h1>
         <p>Это сайт только для внутреннего использования. Пожалуйста, перейдите на основной сайт, если Вы не являетесь сотрудником ООО &laquo;Улыбкино&raquo;.</p>
-        <p><a class="btn btn-primary btn-lg" href="www.ulybkino.ru" >Перейти на сайт &laquo;Улыбкино&raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="{{ path('_ulybkino') }}" >Перейти на сайт &laquo;Улыбкино&raquo;</a></p>
       
     </div>
 
